[package]
name = "buudunn"
version = "0.1.0"
edition = "2021"
authors = ["Clover Johnson", "The Buudunn Group"]
description = "An operating system for the web written in rust"

readme = "README.md"
repository = "https://github.com/buudunn/buudunn"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.68"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.91"
comma = "1.0.0"
wasmi = "0.31.2"
console_error_panic_hook = "0.1.7"
once_cell = "1.19.0"
libm = "0.2.8"
wasm-bindgen-futures = "0.4.42"
eval = "0.4.3"
url = "2.5.0"
meval = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Window',
  "KeyboardEvent",
  "console",
  "Event"
]
